@@ -499,6 +499,15 @@ namespace libtorrent
 			// disk cache.
 			allow_partial_disk_writes,
 
+			// disables any communication that's not going over a proxy.
+			// Enabling this requires a proxy to be configured as well, see ``set_proxy_settings``.
+			// The listen sockets are closed, and incoming connections will
+			// only be accepted through a SOCKS5 or I2P proxy (if a peer proxy is set up and
+			// is run on the same machine as the tracker proxy). This setting also
+			// disabled peer country lookups, since those are done via DNS lookups that
+			// aren't supported by proxies.
+			force_proxy,
+
 			max_bool_setting_internal,
 			num_bool_settings = max_bool_setting_internal - bool_type_base
 		};
